--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,4 @@
-# Groq API Configuration
-VITE_GROQ_API_KEY=your_groq_api_key_here
-VITE_GROQ_MODEL=your_groq_model_name_here
+# Groq API is now handled by n8n workflow - no longer needed in frontend
 
 # Supabase Configuration
 VITE_SUPABASE_URL=your_supabase_url_here
